--- a/_partOne.qmd
+++ b/_partOne.qmd
@@ -1,5 +1,5 @@
 
-### Part 1: The Science of Color and Human Perception {#sec-partOne}
+### Part 1: The Science of Color and Human Perception {.part #sec-partOne}
 
 #### What is Color, Really? {#sec-whatIsColor}
 
@@ -78,13 +78,13 @@ The **pentagon shaped** shows the range of colors available via CMYK printing, w
 :::
 :::::
 
-##### Why HSL Fails for Accessible Color Systems
+##### Why HSL Fails for Accessible Color Systems {#sec-HSL}
 
 While HSL (Hue, Saturation, Lightness) is popular in design tools because it's more intuitive for humans to understand than RGB, it has a critical flaw for accessibility work: its "Lightness" value is not **perceptually** uniform.
 
 In HSL, colors with the same Lightness value can have wildly different perceived brightness to the human eye. For example, at Lightness: 50%, a pure yellow (#FFFF00) appears very light and bright, while a pure blue (#0000FF) appears much darker. This inconsistency makes HSL unreliable for building color systems where you need predictable contrast ratios and consistent visual weight across different hues.
 
-##### The Solution: CIELAB and LCh Color Spaces
+##### The Solution: CIELAB and LCh Color Spaces {#sec-CIELAB}
 
 For accessible data visualization, we recommend using CIELAB and its cylindrical representation LCh (Lightness, Chroma, hue). These color spaces are perceptually uniform. This means that a numerical change in a color's Lightness (L) value corresponds to a consistent change in how light or dark it appears to the human eye, regardless of its hue.
 
