--- a/_partThree.qmd
+++ b/_partThree.qmd
@@ -1,4 +1,4 @@
-### Part 3: Color and Digital Accessibility {#sec-partThree}
+### Part 3: Color and Digital Accessibility {#sec-partThree .part}
 
 #### WCAG's Color & Contrast Criteria: The "Old" Standard {#sec-WCAG}
 
@@ -6,15 +6,29 @@ To make digital content accessible, the Web Content Accessibility Guidelines (WC
 
 ##### AA and AAA Compliance Levels:
 
--   **Level AA** is the standard minimum requirement for most organizations. It ensures accessibility for a wide range of users.
+-   **Level AA** is the standard minimum requirement for most organizations. It ensures accessibility for a wide range of users. WCAG 2.1 Level AA requires a contrast ratio of at least 4.5:1 for normal text and 3:1 for large text, graphics and user interface components (such as form input borders).
 
--   **Level AAA** is a higher, more stringent level of contrast, recommended for critical text and larger audiences.
+-   **Level AAA** is a higher, more stringent level of contrast, recommended for critical text and larger audiences. WCAG Level AAA requires a contrast ratio of at least 7:1 for normal text and 4.5:1 for large text.
 
-**In short:** WCAG 2 provides a simple, widely-used set of rules (like a 4.5:1 contrast ratio for normal text) that is the current legal and industry baseline.
+**In short:** WCAG 2.1 provides a simple, widely-used set of rules that is the current legal and industry baseline. Starting in April 2026, state and local governments' web content and mobile apps must meet at least WCAG 2.1, Level AA compliance standards.
 
 #### The Emergence of APCA (Accessible Perceptual Contrast Algorithm) {#sec-APCA}
 
 APCA is a modern, more sophisticated method for calculating contrast that is being developed as the future standard (for WCAG 3). It recognizes that human perception of contrast is more complex than simple color ratios.
+
+APCA has three levels of conformance: bronze, silver, and gold.
+
+-   The **Bronze level** requirements are:
+
+    -   a minimum contrast of Lc 75 and a preferred contrast of Lc 90 for body text;
+
+    -   a minimum contrast of Lc 60 for large fluent text (fonts 16px or larger);
+
+    -   a minimum contrast of Lc 45 for large fluent content (including text larger than 32px) and a maximum of Lc 90 specifically for large & bold text.
+
+-   The **Silver** and **Gold** levels are more complex.
+
+    -   You can check the requirements for specific font size and weight combinations using the applicable [APCA Font Lookup Tables](https://readtech.org/ARC/tests/visual-readability-contrast/?tn=criterion#tables).
 
 ##### Key Advantages of APCA:
 
@@ -30,11 +44,11 @@ APCA is a modern, more sophisticated method for calculating contrast that is bei
 
 While WCAG 2 is the current enforceable standard, APCA represents the future direction of accessibility.
 
--   **WCAG 2** is a simple, one-size-fits-all rule that is good for basic compliance but can be both too strict in some cases and not strict enough in others.
+-   **WCAG .12** is a simple, one-size-fits-all rule that is good for basic compliance but can be both too strict in some cases and not strict enough in others.
 
 -   **APCA** is a flexible, context-sensitive guide that provides better, more practical results for designers and a better experience for users.
 
-**The industry direction** is moving toward adopting APCA, but for now, many organizations must still follow WCAG 2 for legal compliance.
+**The industry direction** is moving toward adopting APCA, but for now, many organizations must still follow WCAG 2.1 for legal compliance.
 
 #### Other Critical Guidelines: {#sec-otherGuidelines}
 
@@ -46,5 +60,4 @@ Good color contrast is essential, but it's only one part of digital accessibilit
 
 -   **Structuring for Screen Readers:** Using proper ARIA tags and semantic structure in code is essential for making complex SVG visualizations accessible.
 
-*In short:* Color is a powerful tool, but it must be paired with other cues to be truly accessible to everyone.
-
+**In short:** Color is a powerful tool, but it must be paired with other cues to be truly accessible to everyone.
